# zero2prod

./: Cargo.toml  Dockerfile
configuration/: base.yaml  production.yaml
migrations/: 20250128221912_make_status_not_null_in_subscriptions.sql  20250128222117_create_subscriptions_tokens_table.sql
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: configuration.yaml  health_check.rs
tests/api/: helpers.rs  newsletter.rs  subscriptions.rs
tests/migrations/: 20250126111439_create_subscriptions_table.sql  20250126125436_create_subscriptions_table.sql
