[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web="4"
tokio={version="1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.217", features = ["derive"]}
config = "0.15.6"
uuid = { version = "1.12.1", features = ["v4"]}
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
tracing = { version = "0.1.41", features = ["log"]}
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.20.2"
secrecy = { version = "0.10.3", features = ["serde"]}
tracing-actix-web = "0.7.15"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
reqwest = "0.12.12"
