[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web="4"
serde = { version = "1.0.217", features = ["derive"]}
config = "0.15.6"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.12.1", features = ["v4"]}
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
tracing = { version = "0.1.41", features = ["log"]}
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.20.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.15"
serde-aux = "4.5.0"
unicode-segmentation = "1.12.0"
claim = "0.5.0"
validator = "0.14.0"
rand = "0.8.5"
serde_json = "1.0.137"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
fake = "2.9"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1.43.0", features = ["rt", "macros"]}
wiremock = "0.6.2"

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["json", "rustls-tls"]